# farstar-ts

./: README.md  install.sh  pyproject.toml
autotunnelx/: __init__.py  cli.py  config.py  constants.py  engine.py  firewall.py  logging_json.py  metrics.py  routing.py  security.py  shell.py  state.py  sync.py
autotunnelx/protocols/: __init__.py  base.py  classic.py  containers.py  openvpn.py  registry.py  ssh.py  wireguard.py  xray.py
autotunnelx/web/: __init__.py  app.py
autotunnelx/web/static/: app.css  app.js
autotunnelx/web/templates/: dashboard.html  login.html
packaging/: autotunnelctl
packaging/logrotate/: autotunnel
packaging/systemd/: autotunnel-engine.service  autotunnel-webui.service
