[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotunnel-x"
version = "1.0.0"
description = "Automated multi-tunnel orchestration, benchmarking, failover, and Web UI for Ubuntu LTS."
requires-python = ">=3.10"
authors = [{ name = "AutoTunnel-X Operators" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "aiofiles>=23.2",
]

[project.scripts]
autotunnelctl = "autotunnelx.cli:main"

[tool.setuptools.packages.find]
include = ["autotunnelx*"]

[tool.setuptools.package-data]
autotunnelx = ["web/templates/*.html", "web/static/*"]
